force-app/main/default/objects/TestObj__c/fields/tD__c.field-meta.xml
<CustomField>
    <fullName>tD__c</fullName>
    <label>tD</label>
    <type>Date</type>
</CustomField>