force-app/main/default/objects/TestObj__c/fields/TestNum__c.field-meta.xml
<CustomField>
    <fullName>TestNum__c</fullName>
    <label>TestNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>