force-app/main/default/objects/TestObj__c/fields/TestText__c.field-meta.xml
<CustomField>
    <fullName>TestText__c</fullName>
    <label>TestText</label>
    <length>40</length>
    <type>Text</type>
</CustomField>